Fixed menu not working on mobile

--- a/style.css
+++ b/style.css
@@ -249,5 +249,8 @@ footer p {
         visibility: visible;
         display:block;
     }
+    .image-slider-wrapper {
+        display:none;
+    }
 }
 
